--- a/views/index.html
+++ b/views/index.html
@@ -2,5 +2,8 @@
 
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <video width="100%" controls>
+        <source src="/static/videos/sampleVideo.mp4" type="video/mp4">
+        Your browser does not support HTML5 video.
+    </video>      
 </body>
