--- a/views/index.html
+++ b/views/index.html
@@ -2,8 +2,5 @@
 
 </head>
 <body>
-    <video width="100%" controls>
-        <source src="/static/videos/sampleVideo.mp4" type="video/mp4">
-        Your browser does not support HTML5 video.
-    </video>      
+   <h1>Hello world!</h1>
 </body>
