--- a/views/newAlbum.html
+++ b/views/newAlbum.html
@@ -1,6 +1,13 @@
 <head>
-        
+    <script src="https://cdn.rawgit.com/JonathanHuot/bottlepy-plupload/fe5ffa11/js/plupload.full.min.js"></script>
 </head>
 <body>
     <h1>Add new album</h1>
+    <ul id="filelist"></ul>
+
+    <div id="container">
+        <a id="browse" href="javascript:;">[Browse...]</a>
+        <a id="start-upload" href="javascript:;">[Start Upload]</a>
+    </div>
+    <script src="/static/scripts/uploader.js"></script>
 </body>
