--- a/views/videos.html
+++ b/views/videos.html
@@ -5,7 +5,7 @@
     <h1>Videos in album {{album_name}}</h1>
     <ul>
     % for video in videos:
-        <li>{{video}} : {{videos[video]}}</li>
+        <li>{{video}}</li>
     % end
     </ul>
 </body>
