--- a/views/albums.html
+++ b/views/albums.html
@@ -5,7 +5,7 @@
     <h1>Albums</h1>
     <ul>
     % for album in albums:
-        <li>{{album}}</li>
+        <li><a href="/show/videos?album_id={{album['id']}}">{{album['name']}}</a></li>
     % end
     </ul>
 </body>
