--- a/views/upload.html
+++ b/views/upload.html
@@ -3,6 +3,7 @@
 </head>
 <body>
     <h1>Upload Videos</h1>
+    <h3>Album ID: </h3><h4 id="album_id">{{album_id}}</h4>
     <ul id="filelist"></ul>
 
     <div id="container">
