--- a/views/qr.html
+++ b/views/qr.html
@@ -4,6 +4,6 @@
 <body>
    <h1>Hello world!</h1>
     % for img in qr_images:
-        <img src='{{img}}'></img>
+        <img src='/static/qr/{{album_id}}/{{img}}'></img>
     % end
 </body>
