--- a/views/show_views/video.html
+++ b/views/show_views/video.html
@@ -1,6 +1,4 @@
-<head>
-    <h1></h1>
-</head>
+%include('head.html')
 <body>
     <video width="100%" controls>
         <source src="/static/videos/{{video_file_path}}" type="video/mp4">
