--- a/views/add_views/newAlbum.html
+++ b/views/add_views/newAlbum.html
@@ -1,12 +1,15 @@
 <htmk>
-    <head>
-
-    </head>
+    %include('head.html')
     <body>
+        % include('navbar.html')
+        <div class="container">
         <h1>Create new Album</h1>
         <form action="new_album" method="POST">
-            <input type="text" name="album_name" value="New Album Name"><br>
-            <input type="submit" value="Create new album">
+            <div class="form-group">
+                <input type="text" class="form-control" name="album_name" value="New Album Name"><br>
+                <input type="submit" value="Create new album">
+            </div>
         </form>
+        </div>
     </body>
 </htmk>
