--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,8 @@
-<head>
-
-</head>
+% include('head.html')
 <body>
-   <h1>Hello world!</h1>
+    % include('navbar.html')
+    <div class="container">
+        <h3>Welcome!</h3>
+        <p>Fell free to play around.</p>
+    </div>
 </body>
