--- a/views/qr_views/qr.html
+++ b/views/qr_views/qr.html
@@ -1,9 +1,10 @@
-<head>
-
-</head>
+%include('head.html')
 <body>
-   <h1>Hello world!</h1>
-    % for img in qr_images:
-        <img src='/static/qr/{{album_id}}/{{img}}'></img>
-    % end
+    % include('navbar.html')
+    <div class="container">
+    <h1>QR Codes: </h1>
+        % for img in qr_images:
+            <img src='/static/qr/{{album_id}}/{{img}}'></img>
+        % end
+    </div>
 </body>
