--- a/views/show_views/videos.html
+++ b/views/show_views/videos.html
@@ -1,12 +1,15 @@
-<head>
-
-</head>
+%include('head.html')
 <body>
-    <h1>Videos in album {{album_name}}</h1>
-    <a href="/add/upload?album_id={{album_id}}">Upload new Video</a>
-    <ul>
-    % for video in videos:
-        <li>{{video}}</li>
-    % end
-    </ul>
+    % include('navbar.html')
+    <div class="container">
+        <h1>{{album_name}}</h1>
+        <a class="btn btn-default" href="/add/upload?album_id={{album_id}}">Upload new Video</a>
+        <a class="btn btn-default" href="/qr/generate?album_id={{album_id}}">Get QR Codes</a>
+        <h3>Videos in this Album</h3>
+        <div class="list-group">
+        % for video in videos:
+            <a href='/show/video?album_id={{album_id}}&video_name={{video}}' class="list-group-item">{{video}}</a>
+        % end
+        </ul>
+    </div>
 </body>
