Redirect to album details after upload

--- a/views/add_views/upload.html
+++ b/views/add_views/upload.html
@@ -4,7 +4,7 @@
     <script src="https://cdn.rawgit.com/JonathanHuot/bottlepy-plupload/fe5ffa11/js/plupload.full.min.js"></script>
     <div class="container">
         <h1>Upload Videos</h1>
-        <h4>Album ID: </h4><h4 id="album_id">{{album_id}}</h4>
+        <p id="album_id" style="display: none;">{{album_id}}</p>
         <ul class="list-group" id="filelist"></ul>
 
         <div id="container">
