--- a/views/show_views/video.html
+++ b/views/show_views/video.html
@@ -1,7 +1,7 @@
 %include('head.html')
 <body>
-    <video width="100%" controls>
+    <video id="video" height="100%" width="100%" controls>
         <source src="/static/videos/{{video_file_path}}" type="video/mp4">
         Your browser does not support HTML5 video.
-    </video>   
+    </video>
 </body>
