--- a/views/navbar.html
+++ b/views/navbar.html
@@ -8,5 +8,8 @@
         <li><a href="/show/albums">Albums</a></li>
         <li><a href="/add/new_album">Create Album</a></li>
       </ul>
+      <ul class="nav navbar-nav navbar-right">
+          <li><a href="/auth/register"><span class="glyphicon glyphicon-user"></span> Register</a></li>
+        </ul>
     </div>
   </nav>
