--- a/views/navbar.html
+++ b/views/navbar.html
@@ -9,7 +9,13 @@
         <li><a href="/add/new_album">Create Album</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-          <li><a href="/auth/register"><span class="glyphicon glyphicon-user"></span> Register</a></li>
+          % if defined('user'):
+           <li><a href="#"><span class="glyphicon glyphicon-user"></span> Hello {{user}}</a></li>
+           <li><a href="/auth/logout"> Logout</a></li>
+          % else :
+            <li><a href="/auth/register"></span>Register</a></li>
+            <li><a href="/auth/login"></span>Login</a></li>
+          % end
         </ul>
     </div>
   </nav>
