--- a/views/manage_views/albums.html
+++ b/views/manage_views/albums.html
@@ -5,7 +5,7 @@
         <h1>List of all Albums: </h1>
         <div class="list-group">
         % for album in albums:
-            <a href="/show/details?album_id={{album['id']}}" class="list-group-item list-group-item-action">{{album['album_name']}}</a>
+            <a href="/manage_album/details?album_id={{album['id']}}" class="list-group-item list-group-item-action">{{album['album_name']}}</a>
         % end
         </div>
     </div>
