--- a/views/navbar.html
+++ b/views/navbar.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/">Video Albums</a>
+        <a class="navbar-brand" href="/">Fotoplastikon</a>
       </div>
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
-        <li><a href="/show/albums">Albums</a></li>
-        <li><a href="/add/new_album">Create Album</a></li>
+        <li><a href="/manage_album/albums">Albums</a></li>
+        <li><a href="/manage_album/new_album">Create Album</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
           % if defined('user'):
