--- a/views/manage_views/album_details.html
+++ b/views/manage_views/album_details.html
@@ -3,6 +3,10 @@
     % include('navbar.html')
     <div class="container">
         <h1>{{album_name}}</h1>
+        <form action = "/manage_album/delete" method = "post">
+                <input type="hidden" class="form-control" name="album_id" value="{{album_id}}"></input>
+                <input type="submit"  class="btn btn-danger" name="Delete" value="Delete Album" />
+        </form>
         <a class="btn btn-default" href="/manage_video/upload?album_id={{album_id}}">Upload new Video</a>
         <a class="btn btn-default" href="/qr/generate?album_id={{album_id}}">Get QR Codes</a>
         <h3>Videos in this Album</h3>
