--- a/views/navbar.html
+++ b/views/navbar.html
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-static-top">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="/">Fotoplastikon</a>
       </div>
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav ">
         <li><a href="/">Home</a></li>
         <li><a href="/manage_album/albums">Albums</a></li>
         <li><a href="/manage_album/new_album">Create Album</a></li>
