--- a/views/qr_views/qr_form.html
+++ b/views/qr_views/qr_form.html
@@ -18,4 +18,5 @@
             <button type="submit" class="btn btn-default">Generate QR codes</button>
         </form>
     </div>
+    % include('footer.html')
 </body>
