--- a/views/qr_views/qr.html
+++ b/views/qr_views/qr.html
@@ -5,7 +5,10 @@
     <h1>QR Codes: </h1>
     <button class="btn btn-success" onclick="printCodes()">Print all codes</button></br>
         % for img in qr_images:
-            <img src='/static/qr/{{album_id}}/{{img}}'></img>
+            <div class="col-xs-3">
+                <h3>{{img}}</h3>
+                <img src='/static/qr/{{album_id}}/{{img}}'></img>
+            </div>
         % end
     </div>
     <script>
